# sqlite-createtable-parser

./: .gitignore  CMakeLists.txt  CMakeVs2022x64.bat  README.md  sql3parse_table.c  sql3parse_table.h
debug/: main.c  sql3parse_debug.c
test/: Makefile  main.c  sql3parse_debug.c
test/CreateTableParser.xcodeproj/: project.pbxproj
